# Charizard-Premium

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md  build.sh  build_minimal.sh  compile_check.sh  complete_implementation.sh  complete_implementation_fixed_v2.sh  fix_smart_quotes.sh  run.sh  setup_dev.sh
include/bot/: bot_base.hpp  session.hpp  state_manager.hpp
include/bot/bots/: boxing.hpp  classic.hpp  combo.hpp  op.hpp  sumo.hpp
include/bot/features/: bow.hpp  gap.hpp  move_priority.hpp  potion.hpp  rod.hpp
include/bot/player/: combat.hpp  inventory.hpp  lobby_movement.hpp  mouse.hpp  movement.hpp
include/commands/: config_command.hpp
include/core/: config.hpp  key_bindings.hpp  minecraft_client.hpp
include/entities/: entity.hpp  entity_player.hpp  item.hpp
include/gui/: components.hpp  frame.hpp  gl_utils.hpp  gui.hpp
include/network/: minecraft_protocol.hpp  network_connection.hpp  packet_handler.hpp
include/utils/: chat_utils.hpp  entity_utils.hpp  http_utils.hpp  random_utils.hpp  time_utils.hpp  vec3.hpp  webhook.hpp  world_utils.hpp
include/world/: block.hpp  world.hpp
src/: main.cpp
src/bot/: bot_base.cpp  session.cpp  state_manager.cpp
src/bot/bots/: boxing.cpp  boxing.hpp  classic.cpp  classic.hpp  combo.cpp  combo.hpp  op.cpp  op.hpp  sumo.cpp  sumo.hpp
src/bot/features/: bow.cpp  gap.cpp  move_priority.cpp  potion.cpp  rod.cpp
src/bot/player/: combat.cpp  inventory.cpp  lobby_movement.cpp  mouse.cpp  movement.cpp
src/commands/: config_command.cpp
src/core/: config.cpp  key_bindings.cpp  minecraft_client.cpp
src/dll/: charizard_core.cpp  charizard_core.h  dllmain.cpp  hooks.cpp  hooks.h
src/entities/: entity.cpp  entity_player.cpp
src/gui/: components.cpp  frame.cpp  gl_utils.cpp  gui.cpp
src/injector/: main.cpp  process_utils.cpp  process_utils.h
src/network/: minecraft_protocol.cpp  network_connection.cpp  packet_handler.cpp
src/utils/: chat_utils.cpp  entity_utils.cpp  extensions.cpp  http_utils.cpp  random_utils.cpp  time_utils.cpp  webhook.cpp  world_utils.cpp
src/world/: world.cpp
